# webhostadm

./: .gitignore  README  README.rst  acinclude.m4  autoinit.sh  configure.ac
src/: sedvars.mk
src/etc/: Makefile.am
src/etc/webhostadm/: apache.conf  paths.conf.in
src/sbin/: .gitignore  Makefile.am  webhostadm-paths.in  webhostadm-reconfigure
src/share/: Makefile.am
src/share/webhostadm/: Makefile.am  dialogs.sh  utils.sh
template/: unit.php
uml/webhostadm/: 128002  128130.diagram  128386
